add, change and delete studet or class

--- a/3 - school diary with gui (swing)/view/AddClasses.form
+++ b/3 - school diary with gui (swing)/view/AddClasses.form
@@ -6,14 +6,14 @@
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
-    <border type="none" title="Dodaj Grupe"/>
+    <border type="none" title="Add new class"/>
     <children>
       <component id="78293" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Nazwa grupy"/>
+          <text value="Classname"/>
         </properties>
       </component>
       <component id="8a492" class="javax.swing.JLabel">
@@ -21,10 +21,10 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Maksymalna liczba osób"/>
+          <text value="Max number of students"/>
         </properties>
       </component>
-      <component id="c6055" class="javax.swing.JTextField" binding="groupName">
+      <component id="c6055" class="javax.swing.JTextField" binding="classname">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -40,12 +40,12 @@
         </constraints>
         <properties/>
       </component>
-      <component id="fc50f" class="javax.swing.JButton" binding="addGroupButton">
+      <component id="fc50f" class="javax.swing.JButton" binding="addClassButton">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Dodaj grupe"/>
+          <text value="Add class"/>
         </properties>
       </component>
     </children>
