--- a/3 - school diary with gui (swing)/view/AddStudent.form
+++ b/3 - school diary with gui (swing)/view/AddStudent.form
@@ -8,7 +8,7 @@
     <properties>
       <enabled value="false"/>
     </properties>
-    <border type="none" title="Dodaj Studenta"/>
+    <border type="none" title="Add new student"/>
     <children>
       <component id="de5a5" class="javax.swing.JLabel">
         <constraints>
@@ -16,7 +16,7 @@
         </constraints>
         <properties>
           <labelFor value="386e"/>
-          <text value="Imie"/>
+          <text value="Name"/>
           <verticalAlignment value="0"/>
           <verticalTextPosition value="0"/>
         </properties>
@@ -35,7 +35,7 @@
         </constraints>
         <properties>
           <labelFor value="8f8b2"/>
-          <text value="Nazwisko"/>
+          <text value="Secondname"/>
         </properties>
       </component>
       <component id="3553" class="javax.swing.JLabel">
@@ -51,7 +51,7 @@
           <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Dodaj Studenta"/>
+          <text value="Add student"/>
         </properties>
       </component>
       <component id="5f0bc" class="javax.swing.JTextField" binding="index">
