--- a/3 - school diary with gui (swing)/view/SchoolDiary.form
+++ b/3 - school diary with gui (swing)/view/SchoolDiary.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.SchoolDiary">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="10" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="51" width="886" height="441"/>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none" title="School Diary"/>
     <children>
-      <component id="2e2fc" class="javax.swing.JTable" binding="StudentsTable">
+      <component id="2e2fc" class="javax.swing.JTable" binding="studentsFrame">
         <constraints>
           <grid row="1" column="2" row-span="2" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="250" height="50"/>
@@ -16,9 +16,9 @@
         </constraints>
         <properties/>
       </component>
-      <component id="7584a" class="javax.swing.JTable" binding="GroupsTable">
+      <component id="7584a" class="javax.swing.JTable" binding="classesFrame">
         <constraints>
-          <grid row="1" column="6" row-span="2" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="6" row-span="2" col-span="5" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="250" height="50"/>
           </grid>
         </constraints>
@@ -42,7 +42,7 @@
       </component>
       <component id="66bed" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Number of students"/>
@@ -50,7 +50,7 @@
       </component>
       <component id="c80c" class="javax.swing.JButton" binding="sortByPointsButton">
         <constraints>
-          <grid row="4" column="6" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Sort by number of students"/>
@@ -74,7 +74,7 @@
       </component>
       <component id="b73c1" class="javax.swing.JButton" binding="sortByNameButton">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Sort by name"/>
@@ -87,33 +87,49 @@
           </grid>
         </constraints>
         <properties>
-          <text value="Delete student"/>
+          <text value="Remove student"/>
         </properties>
       </component>
-      <component id="b0a93" class="javax.swing.JButton" binding="addStudentStudent">
-        <constraints>
-          <grid row="3" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Add new student"/>
-        </properties>
-      </component>
-      <component id="d5ad7" class="javax.swing.JButton" binding="addGroupButton">
-        <constraints>
-          <grid row="3" column="6" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Add new classes"/>
-        </properties>
-      </component>
-      <component id="cfc92" class="javax.swing.JButton" binding="deleteGroupButton">
+      <component id="cfc92" class="javax.swing.JButton" binding="deleteClassButton">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="30" height="30"/>
           </grid>
         </constraints>
         <properties>
-          <text value="Delete class"/>
+          <text value="Remove class"/>
+        </properties>
+      </component>
+      <component id="b0a93" class="javax.swing.JButton" binding="addStudentButton">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add new student"/>
+        </properties>
+      </component>
+      <component id="7d2a2" class="javax.swing.JButton" binding="changeInfoAboutStudentButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Change info about student"/>
+        </properties>
+      </component>
+      <component id="d5ad7" class="javax.swing.JButton" binding="addClassButton">
+        <constraints>
+          <grid row="4" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add new classes"/>
+        </properties>
+      </component>
+      <component id="226fe" class="javax.swing.JButton" binding="changeInfoAboutClassButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Change info about class"/>
         </properties>
       </component>
     </children>
