--- a/3 - school diary with gui (swing)/view/SchoolDiary.form
+++ b/3 - school diary with gui (swing)/view/SchoolDiary.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.SchoolDiary">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="51" width="886" height="441"/>
@@ -10,7 +10,7 @@
     <children>
       <component id="2e2fc" class="javax.swing.JTable" binding="studentsFrame">
         <constraints>
-          <grid row="1" column="2" row-span="2" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="2" row-span="3" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="250" height="50"/>
           </grid>
         </constraints>
@@ -18,7 +18,7 @@
       </component>
       <component id="7584a" class="javax.swing.JTable" binding="classesFrame">
         <constraints>
-          <grid row="1" column="6" row-span="2" col-span="5" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="6" row-span="3" col-span="5" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="250" height="50"/>
           </grid>
         </constraints>
@@ -48,12 +48,12 @@
           <text value="Number of students"/>
         </properties>
       </component>
-      <component id="c80c" class="javax.swing.JButton" binding="sortByPointsButton">
+      <component id="c80c" class="javax.swing.JButton" binding="sortByClassnameButton">
         <constraints>
-          <grid row="5" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Sort by number of students"/>
+          <text value="Sort by classname"/>
         </properties>
       </component>
       <component id="b921f" class="javax.swing.JLabel" binding="secondName">
@@ -72,17 +72,49 @@
           <text value="Points"/>
         </properties>
       </component>
-      <component id="b73c1" class="javax.swing.JButton" binding="sortByNameButton">
+      <component id="b73c1" class="javax.swing.JButton" binding="sortStudentByNameButton">
         <constraints>
-          <grid row="5" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Sort by name"/>
         </properties>
       </component>
+      <component id="b0a93" class="javax.swing.JButton" binding="addStudentButton">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add new student"/>
+        </properties>
+      </component>
+      <component id="7d2a2" class="javax.swing.JButton" binding="changeInfoAboutStudentButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Change info about student"/>
+        </properties>
+      </component>
+      <component id="d5ad7" class="javax.swing.JButton" binding="addClassButton">
+        <constraints>
+          <grid row="5" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add new classes"/>
+        </properties>
+      </component>
+      <component id="226fe" class="javax.swing.JButton" binding="changeInfoAboutClassButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Change info about class"/>
+        </properties>
+      </component>
       <component id="c3050" class="javax.swing.JButton" binding="deleteStudentButton">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="30" height="30"/>
           </grid>
         </constraints>
@@ -92,7 +124,7 @@
       </component>
       <component id="cfc92" class="javax.swing.JButton" binding="deleteClassButton">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="30" height="30"/>
           </grid>
         </constraints>
@@ -100,37 +132,21 @@
           <text value="Remove class"/>
         </properties>
       </component>
-      <component id="b0a93" class="javax.swing.JButton" binding="addStudentButton">
+      <component id="b6120" class="javax.swing.JLabel">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add new student"/>
+          <text value="Enter a student name"/>
         </properties>
       </component>
-      <component id="7d2a2" class="javax.swing.JButton" binding="changeInfoAboutStudentButton" default-binding="true">
+      <component id="eae3d" class="javax.swing.JTextField" binding="searchStudentName">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
         </constraints>
-        <properties>
-          <text value="Change info about student"/>
-        </properties>
-      </component>
-      <component id="d5ad7" class="javax.swing.JButton" binding="addClassButton">
-        <constraints>
-          <grid row="4" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Add new classes"/>
-        </properties>
-      </component>
-      <component id="226fe" class="javax.swing.JButton" binding="changeInfoAboutClassButton" default-binding="true">
-        <constraints>
-          <grid row="3" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Change info about class"/>
-        </properties>
+        <properties/>
       </component>
     </children>
   </grid>
